[package]
name = "pallet-repository"
description = "blockchain building blocks based on Polkadot and the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0" # workspace properties
readme = "README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Jingnan Zhou"]
edition = "2021"
repository = "https://github.com/iservicebus/pallet-repository.git"
version = "0.9.37"

[[bin]]
name = "pallet_repository"
path = "src/main.rs"



[workspace]
members = [

    "b3-frameworks/relay-mvp/node/cli",
    "b3-frameworks/relay-mvp/node/client",
    "b3-frameworks/relay-mvp/node/service",

    "b3-frameworks/relay-mvp/chains/westend/runtime",
    "b3-frameworks/relay-mvp/chains/westend/chain-spec",
    "b3-frameworks/relay-mvp/chains/rococo/runtime",
    "b3-frameworks/relay-mvp/chains/rococo/chain-spec",
    "b3-frameworks/relay-mvp/chain-selection",


    "b3-frameworks/para-mvp/node",
    "b3-frameworks/para-mvp/chains/sample/runtime",
    "b3-frameworks/para-mvp/chains/sample/chain-spec",
    "b3-frameworks/para-mvp/chain-selection",




    "b3-frameworks/solo-poc/node",
    "b3-frameworks/solo-poc/chains/sample/runtime",
    "b3-frameworks/solo-poc/chains/sample/chain-spec",
    "b3-frameworks/solo-poc/chain-selection",



    "b3-frameworks/solo-mvp/node/cli",
    "b3-frameworks/solo-mvp/node/executor",
    "b3-frameworks/solo-mvp/node/inspect",
    "b3-frameworks/solo-mvp/node/primitives",
    "b3-frameworks/solo-mvp/node/rpc",
    "b3-frameworks/solo-mvp/node/testing",
    "b3-frameworks/solo-mvp/chains/sample/runtime",
    "b3-frameworks/solo-mvp/chains/sample/chain-spec",
    "b3-frameworks/solo-mvp/chain-selection",


    "pallets/template",

    "pallets/finance/trade-finance",


    "pallets/primitives/timestamp",
    "pallets/primitives/indices",
    "pallets/primitives/session",
    "pallets/primitives/session/benchmarking",

    "pallets/primitives/authorship",
    "pallets/primitives/offchain-worker",

]
[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

