[package]
name = "pallet-repository"
description = "blockchain building blocks based on Polkadot and the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0" # workspace properties
readme = "README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Jingnan Zhou"]
edition = "2021"
repository = "https://github.com/iservicebus/pallet-repository.git"
version = "0.9.37"

[[bin]]
name = "pallet_repository"
path = "src/main.rs"



[workspace]
members = [

    "b3-framework/relay-mvp/node/cli",
    "b3-framework/relay-mvp/node/client",
    "b3-framework/relay-mvp/node/service",

    "b3-framework/relay-mvp/chains/westend/runtime",
    "b3-framework/relay-mvp/chains/westend/chain-spec",
    "b3-framework/relay-mvp/chains/rococo/runtime",
    "b3-framework/relay-mvp/chains/rococo/chain-spec",
    "b3-framework/relay-mvp/chain-selection",


    "b3-framework/para-mvp/node",
    "b3-framework/para-mvp/chains/sample/runtime",
    "b3-framework/para-mvp/chains/sample/chain-spec",
    "b3-framework/para-mvp/chain-selection",




    "b3-framework/solo-poc/node",
    "b3-framework/solo-poc/net-defs/sample/runtime",
    "b3-framework/solo-poc/net-defs/sample/chain-spec",
    "b3-framework/solo-poc/net-defs/de-wcf/runtime",
    "b3-framework/solo-poc/net-defs/de-wcf/chain-spec",

    "b3-framework/solo-poc/net-selection",



    "b3-framework/solo-mvp/node/cli",
    "b3-framework/solo-mvp/node/executor",
    "b3-framework/solo-mvp/node/inspect",
    "b3-framework/solo-mvp/node/primitives",
    "b3-framework/solo-mvp/node/rpc",
    "b3-framework/solo-mvp/node/testing",
    "b3-framework/solo-mvp/chains/sample/runtime",
    "b3-framework/solo-mvp/chains/sample/chain-spec",
    "b3-framework/solo-mvp/chain-selection",


    "pallets/template",

    "pallets/finance/detrade",


    "pallets/primitives/timestamp",
    "pallets/primitives/indices",
    "pallets/primitives/session",
    "pallets/primitives/session/benchmarking",

    "pallets/primitives/authorship",
    "pallets/primitives/offchain-worker",

]
[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

