[package]
version.workspace = true
authors.workspace = true
edition.workspace = true

name = "kilt-asset-dids"
description = "Asset DIDs and related structs, suitable for no_std environments."

[dependencies]
# External dependencies
base58 = {version = "0.2.0", default-features = false}
hex = {version = "0.4.0", default-features = false, features = ["alloc"]}
hex-literal = "0.3.4"
log = "0.4.17"

# Parity dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}


# Substrate dependencies

frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}



[features]
default = ["std"]
std = [
  "codec/std",
  "hex/std",
  "log/std",
  "scale-info/std",
  "frame-support/std",
  "sp-core/std",
  "sp-std/std",
]
