[package]
version.workspace = true
authors.workspace = true
edition.workspace = true

name = "runtime-common"
description = "Common interfaces, types, constants and functionality for all KILT runtimes."


[dev-dependencies]

sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", features = ["std"]}







[dependencies]

# External dependencies
codec = {package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"]}
log = "0.4.17"
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
smallvec = "1.8.0"
kilt-asset-dids = {path = "../assets/", default-features = false }



# Internal dependencies

attestation = {path = "../../pallets/primitives/attestation/", default-features = false }
ctype = {path = "../../pallets/primitives/ctype/", default-features = false }
did = {path = "../../pallets/primitives/did/", default-features = false, optional = true}
delegation = {path = "../../pallets/primitives/delegation/", default-features = false, optional = true}

#pallet-did-lookup = {workspace = true, optional = true}
#pallet-inflation = {workspace = true, optional = true}

kilt-support = {path = "../support/", default-features = false }

parachain-staking = {path = "../../pallets/primitives/parachain-staking/", default-features = false }


public-credentials = {path = "../../pallets/primitives/public-credentials/", default-features = false }

pallet-web3-names = {path = "../../pallets/primitives/pallet-web3-names/", default-features = false }



# Substrate dependencies

frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-authorship = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-membership = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

# Cumulus dependencies
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37"}


# Polkadot dependencies
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37"}
xcm = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37"}
xcm-builder = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37"}
xcm-executor = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37"}





[features]
default = ["std"]
fast-gov = []
runtime-benchmarks = [
  "attestation/runtime-benchmarks",
  "ctype/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "parachain-staking/runtime-benchmarks",
  "polkadot-parachain/runtime-benchmarks",
  "public-credentials/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
]
std = [
  "attestation/std",
  "codec/std",
  "ctype/std",
  "cumulus-primitives-core/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-asset-dids/std",
  "kilt-support/std",
  "log/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-membership/std",
  "pallet-transaction-payment/std",
  "parachain-staking/std",
  "polkadot-parachain/std",
  "public-credentials/std",
  "scale-info/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
]
try-runtime = [
  "attestation/try-runtime",
  "delegation",
  "did",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "kilt-support/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
 # "pallet-did-lookup",
 # "pallet-inflation",
  "pallet-membership/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "parachain-staking/try-runtime",
  "public-credentials/try-runtime",
]
