[package]
version.workspace = true
authors.workspace = true
edition.workspace = true

description = "Shared traits and structs used across the KILT pallets"
name = "kilt-support"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# External dependencies
parity-scale-codec = {version = "3.1.5", default-features = false}
log = "0.4.17"
scale-info = {version = "2.1.1", default-features = false}

# Substrate dependencies

frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}



# std dependencies
serde = { version = "1.0.144",  optional = true} 


[features]
default = ["std"]
mock = []
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
