[package]
version.workspace = true
authors.workspace = true
edition.workspace = true
name = "kilt-runtime-api-public-credentials"
description = "Runtime APIs for dealing with public credentials."

[dependencies]
# External dependencies
parity-scale-codec = {version = "3.1.5", default-features = false, features = ["derive"]}

# Internal dependencies
kilt-support = {path = "../../support/", default-features = false }


# Substrate dependencies
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
  "kilt-support/std",
	"sp-api/std",
	"sp-std/std",
]
