[package]
version.workspace = true
authors.workspace = true
edition.workspace = true
name = "kilt-runtime-api-public-credentials"
description = "Runtime APIs for dealing with public credentials."

[dependencies]
# External dependencies
# External dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }


# Internal dependencies
kilt-support = {path = "../../support/", default-features = false }


# Substrate dependencies
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

[features]
default = ["std"]
std = [
	"codec/std",
  "kilt-support/std",
	"sp-api/std",
	"sp-std/std",
]
