[package]
version.workspace = true
authors.workspace = true
edition.workspace = true
name = "attestation"
description = "Enables adding and revoking attestations."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]

ctype = {path = "../ctype/", default-features = false, features = ["mock"] }
kilt-support = {path = "../../../common/support/", default-features = false, features = ["mock", "try-runtime"] }
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", features = ["std"]}
sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", features = ["std"]}
# std dependencies
serde = { version = "1.0.144"} 


[dependencies]

# External dependencies
parity-scale-codec = {version = "3.1.5", default-features = false, features = ["derive"]}
log = "0.4.17"
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}



# Internal dependencies
kilt-support = {path = "../../../common/support/", default-features = false }
ctype = {path = "../ctype/", default-features = false  }

# Substrate dependencies

frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true}


sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true}
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}

sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

[features]
default = ["std"]
mock = [
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-keystore",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "sp-core",
  "sp-runtime/runtime-benchmarks"
]
std = [
  "parity-scale-codec/std",
  "ctype/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "kilt-support/try-runtime"
]
