[package]
version.workspace = true
authors.workspace = true
edition.workspace = true
name = "pallet-did-lookup"
description = "Lookup the DID for a blockchain account."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
kilt-support = {path = "../../../common/support/", default-features = false, features = ["mock", "try-runtime"] }

pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", features = ["std"]}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}



[dependencies]



# Internal dependencies
kilt-support = {path = "../../../common/support/", default-features = false }

# External dependencies


# External dependencies
codec = {package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"]}
scale-info = {version = "2.1.1", default-features = false}
log = "0.4.17"
hex = {version = "0.4.0", default-features = false}
libsecp256k1 = {version = "0.7", default-features = false}

sha3 = {version = "0.10.0", default-features = false}




# Substrate dependencies

frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}


sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true}
sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}






[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "sp-io",
  "kilt-support/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "log/std",
  "libsecp256k1/std",
  "scale-info/std",
  "sha3/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "kilt-support/try-runtime",
]
