[package]
version.workspace = true
authors.workspace = true
edition.workspace = true
name = "parachain-staking"
description = "Parachain parachain-staking pallet for collator delegation and selection as well as reward distribution"

[dev-dependencies]


kilt-support = {path = "../../../common/support/", default-features = false, features = ["mock", "try-runtime"] }

# Substrate dependencies
pallet-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
pallet-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}

sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", features = ["std"]}



[dependencies]

# Internal dependencies
kilt-runtime-api-staking = {path = "../../../common/runtime-api/staking/", default-features = false}
kilt-support = {path = "../../../common/support/", default-features = false }


# External dependencies
parity-scale-codec = {version = "3.1.5", default-features = false, features = ["derive"]}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
log = "0.4.17"
serde = { version = "1.0.144", optional = true}


# Substrate dependencies

frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37", optional = true}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

sp-staking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

pallet-authorship = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-runtime-api-staking/std",
  "log/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-session/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
]
try-runtime = [
  "frame-system/try-runtime",
  "frame-support/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-session/try-runtime",
  "kilt-support/try-runtime"
]
